[gd_scene load_steps=11 format=3 uid="uid://bn3ilfna1u6vy"]

[ext_resource type="Script" path="res://scenes/menus/palette_editor.gd" id="1_6qp4k"]
[ext_resource type="Shader" path="res://scenes/player/gura.gdshader" id="2_fcqnv"]
[ext_resource type="Texture2D" uid="uid://b0r4gvaa14n17" path="res://assets/images/gura/gura_sprites.png" id="2_jnh2f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ajtr4"]
shader = ExtResource("2_fcqnv")
shader_parameter/color1 = Color(0.203922, 0.454902, 0.619608, 1)
shader_parameter/color2 = Color(0.294118, 0.556863, 0.682353, 1)
shader_parameter/color3 = Color(0.388235, 0.815686, 0.831373, 1)
shader_parameter/color4 = Color(0.541176, 0.784314, 0.905882, 1)
shader_parameter/newColor1 = Color(68, 88, 219, 255)
shader_parameter/newColor2 = Color(69, 118, 255, 255)
shader_parameter/newColor3 = Color(248, 0, 248, 255)
shader_parameter/newColor4 = Color(248, 0, 248, 255)

[sub_resource type="AtlasTexture" id="AtlasTexture_jke5i"]
atlas = ExtResource("2_jnh2f")
region = Rect2(0, 0, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2avp"]
atlas = ExtResource("2_jnh2f")
region = Rect2(0, 600, 300, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_ejluy"]
atlas = ExtResource("2_jnh2f")
region = Rect2(0, 300, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_myo1g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jke5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2avp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejluy")
}],
"loop": true,
"name": &"default",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_476pn"]
atlas = ExtResource("2_jnh2f")
region = Rect2(300, 600, 300, 300)

[sub_resource type="SpriteFrames" id="SpriteFrames_65ui1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_476pn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="paletteEditor" type="HBoxContainer"]
offset_right = 158.0
offset_bottom = 40.0
script = ExtResource("1_6qp4k")

[node name="0" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="1" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="2" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="3" type="ColorPickerButton" parent="."]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="spr" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_ajtr4")
position = Vector2(488, 136)
sprite_frames = SubResource("SpriteFrames_myo1g")

[node name="t" type="AnimatedSprite2D" parent="spr"]
z_index = -1
use_parent_material = true
position = Vector2(0, 16)
rotation = 0.588093
sprite_frames = SubResource("SpriteFrames_65ui1")

[connection signal="color_changed" from="0" to="." method="_on__color_changed"]
[connection signal="color_changed" from="1" to="." method="_on_1_color_changed"]
[connection signal="color_changed" from="2" to="." method="_on_2_color_changed"]
[connection signal="color_changed" from="3" to="." method="_on_3_color_changed"]
